// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` operator info test  works as planned: 2nd user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentOperator": "u2",
  "currentPreset": {
    "pname": "S#2",
    "movement": "m#2",
    "movementTowards": "mt#2",
    "duration": 6,
    "directorRemarks": "rd#2",
    "operatorRemarks": "ro#2",
    "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "importance": "r",
    "preset": "c3bbbbbbbbbbbbbbbb098765"
  },
  "currentCameras": [
    "c2bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "presetByCamera": [
    {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c1bbbbbbbbbbbbbbbb098765",
        "c1bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c3bbbbbbbbbbbbbbbb098765",
        "c3bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c2bbbbbbbbbbbbbbbb098765",
        "c2bbbbbbbbbbbbbbbb198765"
      ]
    }
  ],
  "filteredList": [
    {
      "pname": "S#3",
      "movement": "m#3",
      "movementTowards": "mt#3",
      "duration": 1,
      "directorRemarks": "rd#3",
      "operatorRemarks": "ro#3",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#5",
      "movement": "m#5",
      "movementTowards": "mt#5",
      "duration": 2,
      "directorRemarks": "rd#5",
      "operatorRemarks": "ro#5",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb198765"
    }
  ],
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "isPresetView": false,
  "isOperatorChooserVisible": false
}
</div>
`;

exports[` operator info test  works as planned: Before anything 1`] = `
<div
  className="operatorinfo"
>
  {
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentCameras": [],
  "presetByCamera": [],
  "filteredList": [],
  "isPresetView": false,
  "isOperatorChooserVisible": false
}
</div>
`;

exports[` operator info test  works as planned: Invalid user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentOperator": "blabliblu",
  "currentPreset": {
    "pname": "S#2",
    "movement": "m#2",
    "movementTowards": "mt#2",
    "duration": 6,
    "directorRemarks": "rd#2",
    "operatorRemarks": "ro#2",
    "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "importance": "r",
    "preset": "c3bbbbbbbbbbbbbbbb098765"
  },
  "currentCameras": [],
  "presetByCamera": [
    {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c1bbbbbbbbbbbbbbbb098765",
        "c1bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c3bbbbbbbbbbbbbbbb098765",
        "c3bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c2bbbbbbbbbbbbbbbb098765",
        "c2bbbbbbbbbbbbbbbb198765"
      ]
    }
  ],
  "filteredList": [
    {
      "pname": "S#1",
      "movement": "m#1",
      "movementTowards": "mt#1",
      "duration": 5,
      "directorRemarks": "rd#1",
      "operatorRemarks": "ro#1",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c1bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#2",
      "movement": "m#2",
      "movementTowards": "mt#2",
      "duration": 6,
      "directorRemarks": "rd#2",
      "operatorRemarks": "ro#2",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "r",
      "preset": "c3bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#3",
      "movement": "m#3",
      "movementTowards": "mt#3",
      "duration": 1,
      "directorRemarks": "rd#3",
      "operatorRemarks": "ro#3",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#4",
      "movement": "m#4",
      "movementTowards": "mt#4",
      "duration": 3,
      "directorRemarks": "rd#4",
      "operatorRemarks": "ro#4",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "m",
      "preset": "c1bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#5",
      "movement": "m#5",
      "movementTowards": "mt#5",
      "duration": 2,
      "directorRemarks": "rd#5",
      "operatorRemarks": "ro#5",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#6",
      "movement": "m#6",
      "movementTowards": "mt#6",
      "duration": 2,
      "directorRemarks": "rd#6",
      "operatorRemarks": "ro#6",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c3bbbbbbbbbbbbbbbb198765"
    }
  ],
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "isPresetView": false,
  "isOperatorChooserVisible": false
}
</div>
`;

exports[` operator info test  works as planned: Preset view active No user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentOperator": "",
  "currentPreset": {
    "pname": "S#2",
    "movement": "m#2",
    "movementTowards": "mt#2",
    "duration": 6,
    "directorRemarks": "rd#2",
    "operatorRemarks": "ro#2",
    "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "importance": "r",
    "preset": "c3bbbbbbbbbbbbbbbb098765"
  },
  "currentCameras": [],
  "presetByCamera": [
    {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c1bbbbbbbbbbbbbbbb098765",
        "c1bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c3bbbbbbbbbbbbbbbb098765",
        "c3bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c2bbbbbbbbbbbbbbbb098765",
        "c2bbbbbbbbbbbbbbbb198765"
      ]
    }
  ],
  "filteredList": [
    {
      "pname": "S#1",
      "movement": "m#1",
      "movementTowards": "mt#1",
      "duration": 5,
      "directorRemarks": "rd#1",
      "operatorRemarks": "ro#1",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c1bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#2",
      "movement": "m#2",
      "movementTowards": "mt#2",
      "duration": 6,
      "directorRemarks": "rd#2",
      "operatorRemarks": "ro#2",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "r",
      "preset": "c3bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#3",
      "movement": "m#3",
      "movementTowards": "mt#3",
      "duration": 1,
      "directorRemarks": "rd#3",
      "operatorRemarks": "ro#3",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#4",
      "movement": "m#4",
      "movementTowards": "mt#4",
      "duration": 3,
      "directorRemarks": "rd#4",
      "operatorRemarks": "ro#4",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "m",
      "preset": "c1bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#5",
      "movement": "m#5",
      "movementTowards": "mt#5",
      "duration": 2,
      "directorRemarks": "rd#5",
      "operatorRemarks": "ro#5",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#6",
      "movement": "m#6",
      "movementTowards": "mt#6",
      "duration": 2,
      "directorRemarks": "rd#6",
      "operatorRemarks": "ro#6",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c3bbbbbbbbbbbbbbbb198765"
    }
  ],
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "isPresetView": true,
  "isOperatorChooserVisible": false
}
</div>
`;

exports[` operator info test  works as planned: Preset view active first user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentOperator": "u1",
  "currentPreset": {
    "pname": "S#2",
    "movement": "m#2",
    "movementTowards": "mt#2",
    "duration": 6,
    "directorRemarks": "rd#2",
    "operatorRemarks": "ro#2",
    "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "importance": "r",
    "preset": "c3bbbbbbbbbbbbbbbb098765"
  },
  "currentCameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "presetByCamera": [
    {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c1bbbbbbbbbbbbbbbb098765",
        "c1bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c3bbbbbbbbbbbbbbbb098765",
        "c3bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c2bbbbbbbbbbbbbbbb098765",
        "c2bbbbbbbbbbbbbbbb198765"
      ]
    }
  ],
  "filteredList": [
    {
      "pname": "S#1",
      "movement": "m#1",
      "movementTowards": "mt#1",
      "duration": 5,
      "directorRemarks": "rd#1",
      "operatorRemarks": "ro#1",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c1bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#2",
      "movement": "m#2",
      "movementTowards": "mt#2",
      "duration": 6,
      "directorRemarks": "rd#2",
      "operatorRemarks": "ro#2",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "r",
      "preset": "c3bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#4",
      "movement": "m#4",
      "movementTowards": "mt#4",
      "duration": 3,
      "directorRemarks": "rd#4",
      "operatorRemarks": "ro#4",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "m",
      "preset": "c1bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#6",
      "movement": "m#6",
      "movementTowards": "mt#6",
      "duration": 2,
      "directorRemarks": "rd#6",
      "operatorRemarks": "ro#6",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c3bbbbbbbbbbbbbbbb198765"
    }
  ],
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "isPresetView": true,
  "isOperatorChooserVisible": false
}
</div>
`;

exports[` operator info test  works as planned: Preset view disabled 1`] = `
<div
  className="operatorinfo"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentOperator": "u1",
  "currentPreset": {
    "pname": "S#2",
    "movement": "m#2",
    "movementTowards": "mt#2",
    "duration": 6,
    "directorRemarks": "rd#2",
    "operatorRemarks": "ro#2",
    "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "importance": "r",
    "preset": "c3bbbbbbbbbbbbbbbb098765"
  },
  "currentCameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "presetByCamera": [
    {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c1bbbbbbbbbbbbbbbb098765",
        "c1bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c3bbbbbbbbbbbbbbbb098765",
        "c3bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c2bbbbbbbbbbbbbbbb098765",
        "c2bbbbbbbbbbbbbbbb198765"
      ]
    }
  ],
  "filteredList": [
    {
      "pname": "S#1",
      "movement": "m#1",
      "movementTowards": "mt#1",
      "duration": 5,
      "directorRemarks": "rd#1",
      "operatorRemarks": "ro#1",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c1bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#2",
      "movement": "m#2",
      "movementTowards": "mt#2",
      "duration": 6,
      "directorRemarks": "rd#2",
      "operatorRemarks": "ro#2",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "r",
      "preset": "c3bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#4",
      "movement": "m#4",
      "movementTowards": "mt#4",
      "duration": 3,
      "directorRemarks": "rd#4",
      "operatorRemarks": "ro#4",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "m",
      "preset": "c1bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#6",
      "movement": "m#6",
      "movementTowards": "mt#6",
      "duration": 2,
      "directorRemarks": "rd#6",
      "operatorRemarks": "ro#6",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c3bbbbbbbbbbbbbbbb198765"
    }
  ],
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "isPresetView": false,
  "isOperatorChooserVisible": false
}
</div>
`;

exports[` operator info test  works as planned: Removed user selection 1`] = `
<div
  className="operatorinfo"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentOperator": "",
  "currentPreset": {
    "pname": "S#2",
    "movement": "m#2",
    "movementTowards": "mt#2",
    "duration": 6,
    "directorRemarks": "rd#2",
    "operatorRemarks": "ro#2",
    "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "importance": "r",
    "preset": "c3bbbbbbbbbbbbbbbb098765"
  },
  "currentCameras": [],
  "presetByCamera": [
    {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c1bbbbbbbbbbbbbbbb098765",
        "c1bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c3bbbbbbbbbbbbbbbb098765",
        "c3bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c2bbbbbbbbbbbbbbbb098765",
        "c2bbbbbbbbbbbbbbbb198765"
      ]
    }
  ],
  "filteredList": [
    {
      "pname": "S#1",
      "movement": "m#1",
      "movementTowards": "mt#1",
      "duration": 5,
      "directorRemarks": "rd#1",
      "operatorRemarks": "ro#1",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c1bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#2",
      "movement": "m#2",
      "movementTowards": "mt#2",
      "duration": 6,
      "directorRemarks": "rd#2",
      "operatorRemarks": "ro#2",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "r",
      "preset": "c3bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#3",
      "movement": "m#3",
      "movementTowards": "mt#3",
      "duration": 1,
      "directorRemarks": "rd#3",
      "operatorRemarks": "ro#3",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#4",
      "movement": "m#4",
      "movementTowards": "mt#4",
      "duration": 3,
      "directorRemarks": "rd#4",
      "operatorRemarks": "ro#4",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "m",
      "preset": "c1bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#5",
      "movement": "m#5",
      "movementTowards": "mt#5",
      "duration": 2,
      "directorRemarks": "rd#5",
      "operatorRemarks": "ro#5",
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c2bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#6",
      "movement": "m#6",
      "movementTowards": "mt#6",
      "duration": 2,
      "directorRemarks": "rd#6",
      "operatorRemarks": "ro#6",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c3bbbbbbbbbbbbbbbb198765"
    }
  ],
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "isPresetView": false,
  "isOperatorChooserVisible": false
}
</div>
`;

exports[` operator info test  works as planned: first user selected 1`] = `
<div
  className="operatorinfo"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "currentOperator": "u1",
  "currentPreset": {
    "pname": "S#2",
    "movement": "m#2",
    "movementTowards": "mt#2",
    "duration": 6,
    "directorRemarks": "rd#2",
    "operatorRemarks": "ro#2",
    "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
    "importance": "r",
    "preset": "c3bbbbbbbbbbbbbbbb098765"
  },
  "currentCameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "presetByCamera": [
    {
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c1bbbbbbbbbbbbbbbb098765",
        "c1bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c3bbbbbbbbbbbbbbbb098765",
        "c3bbbbbbbbbbbbbbbb198765"
      ]
    },
    {
      "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
      "presets": [
        "c2bbbbbbbbbbbbbbbb098765",
        "c2bbbbbbbbbbbbbbbb198765"
      ]
    }
  ],
  "filteredList": [
    {
      "pname": "S#1",
      "movement": "m#1",
      "movementTowards": "mt#1",
      "duration": 5,
      "directorRemarks": "rd#1",
      "operatorRemarks": "ro#1",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c1bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#2",
      "movement": "m#2",
      "movementTowards": "mt#2",
      "duration": 6,
      "directorRemarks": "rd#2",
      "operatorRemarks": "ro#2",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "r",
      "preset": "c3bbbbbbbbbbbbbbbb098765"
    },
    {
      "pname": "S#4",
      "movement": "m#4",
      "movementTowards": "mt#4",
      "duration": 3,
      "directorRemarks": "rd#4",
      "operatorRemarks": "ro#4",
      "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
      "importance": "m",
      "preset": "c1bbbbbbbbbbbbbbbb198765"
    },
    {
      "pname": "S#6",
      "movement": "m#6",
      "movementTowards": "mt#6",
      "duration": 2,
      "directorRemarks": "rd#6",
      "operatorRemarks": "ro#6",
      "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
      "preset": "c3bbbbbbbbbbbbbbbb198765"
    }
  ],
  "item": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "operators": [
      "u1",
      "u2"
    ],
    "cameras": [
      "c1bbbbbbbbbbbbbbbbbbbbbb",
      "c2bbbbbbbbbbbbbbbbbbbbbb",
      "c3bbbbbbbbbbbbbbbbbbbbbb"
    ],
    "operatorCameraMapping": [
      {
        "operator": "u1",
        "cameras": [
          "c1bbbbbbbbbbbbbbbbbbbbbb",
          "c3bbbbbbbbbbbbbbbbbbbbbb"
        ]
      },
      {
        "operator": "u2",
        "cameras": [
          "c2bbbbbbbbbbbbbbbbbbbbbb"
        ]
      }
    ],
    "program": [
      {
        "pname": "S#1",
        "movement": "m#1",
        "movementTowards": "mt#1",
        "duration": 5,
        "directorRemarks": "rd#1",
        "operatorRemarks": "ro#1",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c1bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#2",
        "movement": "m#2",
        "movementTowards": "mt#2",
        "duration": 6,
        "directorRemarks": "rd#2",
        "operatorRemarks": "ro#2",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "r",
        "preset": "c3bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#3",
        "movement": "m#3",
        "movementTowards": "mt#3",
        "duration": 1,
        "directorRemarks": "rd#3",
        "operatorRemarks": "ro#3",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb098765"
      },
      {
        "pname": "S#4",
        "movement": "m#4",
        "movementTowards": "mt#4",
        "duration": 3,
        "directorRemarks": "rd#4",
        "operatorRemarks": "ro#4",
        "camera": "c1bbbbbbbbbbbbbbbbbbbbbb",
        "importance": "m",
        "preset": "c1bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#5",
        "movement": "m#5",
        "movementTowards": "mt#5",
        "duration": 2,
        "directorRemarks": "rd#5",
        "operatorRemarks": "ro#5",
        "camera": "c2bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c2bbbbbbbbbbbbbbbb198765"
      },
      {
        "pname": "S#6",
        "movement": "m#6",
        "movementTowards": "mt#6",
        "duration": 2,
        "directorRemarks": "rd#6",
        "operatorRemarks": "ro#6",
        "camera": "c3bbbbbbbbbbbbbbbbbbbbbb",
        "preset": "c3bbbbbbbbbbbbbbbb198765"
      }
    ]
  },
  "isPresetView": false,
  "isOperatorChooserVisible": false
}
</div>
`;
